--- a/destination_x/app/templates/base.html
+++ b/destination_x/app/templates/base.html
@@ -1,101 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    <title>Destination X</title>
-
-    <!-- Bootstrap -->
-    <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
-
-    <!-- Application CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/other/fontawesome.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/other/owl.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/other/animate.css') }}">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/base.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/header.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/banner.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/country.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/action.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/footer.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/places.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/place_list.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/css/selection.css') }}">
-    
-    {% block css %} {% endblock%}
-
-    <!--
-
-    TemplateMo 580 Woox Travel
-
-    https://templatemo.com/tm-580-woox-travel
-
-    -->
-  </head>
-
-  <body>
-    <!-- ***** Preloader Start ***** -->
-    <div id="js-preloader" class="js-preloader">
-      <div class="preloader-inner">
-        <span class="dot"></span>
-        <div class="dots">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %}DestinationX{% endblock %}</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1CdmM3K8iE2e0zuyjU2z9RR1Bo+8p1F0xIM+B07jRM"
+    crossorigin="anonymous"
+  >
+  {% block head %}{% endblock %}
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{{ url_for('home.index') }}">DestinationX</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('auth.signup') }}">Sign Up</a>
+          </li>
+        </ul>
       </div>
     </div>
-    <!-- ***** Preloader End ***** -->
+  </nav>
 
-    <!-- ***** Header Area Start ***** -->
-    <header class="header-area header-sticky">
-      {% include "header.html" %}
-    </header>
-    <!-- ***** Header Area End ***** -->
-    
-    {% block main %}{% endblock %}
+  <div class="container mt-4">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% for category, message in messages %}
+        <div class="alert alert-{{ 'danger' if category == 'error' else category }} alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+      {% endfor %}
+    {% endwith %}
 
-    <footer>
-      {% include "footer.html" %}
-    </footer>
+    {% block content %}{% endblock %}
+  </div>
 
-
-    <!-- Scripts -->
-    <!-- Bootstrap core JavaScript -->
-    <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
-
-    <script src="{{ url_for('static', filename='assets/js/isotope.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='assets/js/owl-carousel.js') }}"></script>
-    <script src="{{ url_for('static', filename='assets/js/wow.js') }}"></script>
-    <script src="{{ url_for('static', filename='assets/js/tabs.js') }}"></script>
-    <script src="{{ url_for('static', filename='assets/js/popup.js') }}"></script>
-    <script src="{{ url_for('static', filename='assets/js/custom.js') }}"></script>
-    
-    {% block js %}   
-      <script>
-        function bannerSwitcher() {
-          next = $('.sec-1-input').filter(':checked').next('.sec-1-input');
-          if (next.length) next.prop('checked', true);
-          else $('.sec-1-input').first().prop('checked', true);
-        }
-
-        var bannerTimer = setInterval(bannerSwitcher, 5000);
-
-        $('nav .controls label').click(function() {
-          clearInterval(bannerTimer);
-          bannerTimer = setInterval(bannerSwitcher, 5000)
-        });
-      </script>
-    {% endblock%}
-
-  </body>
-
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+AMvyTG2xUFEeVOvoYyBnNQ0Q2rb2"
+    crossorigin="anonymous"
+  ></script>
+  {% block scripts %}{% endblock %}
+</body>
 </html>
